fix: correct horizontal on mobile

--- a/style.css
+++ b/style.css
@@ -155,10 +155,6 @@ a:hover {
     width: 100%;
   }
 
-  .card.horizontal .card-image::after {
-    display: none;
-  }
-
   .card.horizontal .card-image img {
     height: 100%;
   }
@@ -166,7 +162,7 @@ a:hover {
   .card.horizontal .card-footer {
     padding: 1rem;
     top: 0;
-    right: 50%;
+    right: auto;
     bottom: 0;
     left: 0;
   }
